--- a/Refactored_Py_DS_ML_Bootcamp-master/10-Data-Capstone-Projects/01-911 Calls Data Capstone Project.ipynb
+++ b/Refactored_Py_DS_ML_Bootcamp-master/10-Data-Capstone-Projects/01-911 Calls Data Capstone Project.ipynb
@@ -43,12 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,12 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,18 +82,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('911.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "** Check the info() of the df **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 99492 entries, 0 to 99491\nData columns (total 9 columns):\nlat          99492 non-null float64\nlng          99492 non-null float64\ndesc         99492 non-null object\nzip          86637 non-null float64\ntitle        99492 non-null object\ntimeStamp    99492 non-null object\ntwp          99449 non-null object\naddr         98973 non-null object\ne            99492 non-null int64\ndtypes: float64(3), int64(1), object(5)\nmemory usage: 6.8+ MB\n"
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -126,6 +152,34 @@
    },
    "source": [
     "** Check the head of df **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "         lat        lng                                               desc  \\\n0  40.297876 -75.581294  REINDEER CT & DEAD END;  NEW HANOVER; Station ...   \n1  40.258061 -75.264680  BRIAR PATH & WHITEMARSH LN;  HATFIELD TOWNSHIP...   \n2  40.121182 -75.351975  HAWS AVE; NORRISTOWN; 2015-12-10 @ 14:39:21-St...   \n3  40.116153 -75.343513  AIRY ST & SWEDE ST;  NORRISTOWN; Station 308A;...   \n4  40.251492 -75.603350  CHERRYWOOD CT & DEAD END;  LOWER POTTSGROVE; S...   \n\n       zip                    title           timeStamp                twp  \\\n0  19525.0   EMS: BACK PAINS/INJURY 2015-12-10 17:40:00        NEW HANOVER   \n1  19446.0  EMS: DIABETIC EMERGENCY 2015-12-10 17:40:00  HATFIELD TOWNSHIP   \n2  19401.0      Fire: GAS-ODOR/LEAK 2015-12-10 17:40:00         NORRISTOWN   \n3  19401.0   EMS: CARDIAC EMERGENCY 2015-12-10 17:40:01         NORRISTOWN   \n4      NaN           EMS: DIZZINESS 2015-12-10 17:40:01   LOWER POTTSGROVE   \n\n                         addr  e reason  Hour  Month  Day of Week  \n0      REINDEER CT & DEAD END  1    EMS    17     12            3  \n1  BRIAR PATH & WHITEMARSH LN  1    EMS    17     12            3  \n2                    HAWS AVE  1   Fire    17     12            3  \n3          AIRY ST & SWEDE ST  1    EMS    17     12            3  \n4    CHERRYWOOD CT & DEAD END  1    EMS    17     12            3  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>lat</th>\n      <th>lng</th>\n      <th>desc</th>\n      <th>zip</th>\n      <th>title</th>\n      <th>timeStamp</th>\n      <th>twp</th>\n      <th>addr</th>\n      <th>e</th>\n      <th>reason</th>\n      <th>Hour</th>\n      <th>Month</th>\n      <th>Day of Week</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>40.297876</td>\n      <td>-75.581294</td>\n      <td>REINDEER CT &amp; DEAD END;  NEW HANOVER; Station ...</td>\n      <td>19525.0</td>\n      <td>EMS: BACK PAINS/INJURY</td>\n      <td>2015-12-10 17:40:00</td>\n      <td>NEW HANOVER</td>\n      <td>REINDEER CT &amp; DEAD END</td>\n      <td>1</td>\n      <td>EMS</td>\n      <td>17</td>\n      <td>12</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>40.258061</td>\n      <td>-75.264680</td>\n      <td>BRIAR PATH &amp; WHITEMARSH LN;  HATFIELD TOWNSHIP...</td>\n      <td>19446.0</td>\n      <td>EMS: DIABETIC EMERGENCY</td>\n      <td>2015-12-10 17:40:00</td>\n      <td>HATFIELD TOWNSHIP</td>\n      <td>BRIAR PATH &amp; WHITEMARSH LN</td>\n      <td>1</td>\n      <td>EMS</td>\n      <td>17</td>\n      <td>12</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>40.121182</td>\n      <td>-75.351975</td>\n      <td>HAWS AVE; NORRISTOWN; 2015-12-10 @ 14:39:21-St...</td>\n      <td>19401.0</td>\n      <td>Fire: GAS-ODOR/LEAK</td>\n      <td>2015-12-10 17:40:00</td>\n      <td>NORRISTOWN</td>\n      <td>HAWS AVE</td>\n      <td>1</td>\n      <td>Fire</td>\n      <td>17</td>\n      <td>12</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>40.116153</td>\n      <td>-75.343513</td>\n      <td>AIRY ST &amp; SWEDE ST;  NORRISTOWN; Station 308A;...</td>\n      <td>19401.0</td>\n      <td>EMS: CARDIAC EMERGENCY</td>\n      <td>2015-12-10 17:40:01</td>\n      <td>NORRISTOWN</td>\n      <td>AIRY ST &amp; SWEDE ST</td>\n      <td>1</td>\n      <td>EMS</td>\n      <td>17</td>\n      <td>12</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>40.251492</td>\n      <td>-75.603350</td>\n      <td>CHERRYWOOD CT &amp; DEAD END;  LOWER POTTSGROVE; S...</td>\n      <td>NaN</td>\n      <td>EMS: DIZZINESS</td>\n      <td>2015-12-10 17:40:01</td>\n      <td>LOWER POTTSGROVE</td>\n      <td>CHERRYWOOD CT &amp; DEAD END</td>\n      <td>1</td>\n      <td>EMS</td>\n      <td>17</td>\n      <td>12</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "#df.head()\n",
+    "df['reason']=df['title'].apply(lambda title: title.split(':')[0])\n",
+    "df['timeStamp'] = pd.to_datetime(df['timeStamp'])\n",
+    "df['Hour'] = df['timeStamp'].apply(lambda time: time.hour)\n",
+    "df['Month'] = df['timeStamp'].apply(lambda time: time.month)\n",
+    "df['Day of Week'] = df['timeStamp'].apply(lambda time: time.dayofweek)\n",
+    "\n",
+    "df.head()\n"
    ]
   },
   {
@@ -236,6 +290,23 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 99492 entries, 0 to 99491\nData columns (total 13 columns):\nlat            99492 non-null float64\nlng            99492 non-null float64\ndesc           99492 non-null object\nzip            86637 non-null float64\ntitle          99492 non-null object\ntimeStamp      99492 non-null datetime64[ns]\ntwp            99449 non-null object\naddr           98973 non-null object\ne              99492 non-null int64\nreason         99492 non-null object\nHour           99492 non-null int64\nMonth          99492 non-null int64\nDay of Week    99492 non-null int64\ndtypes: datetime64[ns](1), float64(3), int64(4), object(5)\nmemory usage: 9.9+ MB\n"
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -247,6 +318,24 @@
    "metadata": {},
    "source": [
     "** What are the top 5 zipcodes for 911 calls? **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "19401.0    6979\n19464.0    6643\n19403.0    4854\n19446.0    4748\n19406.0    3174\nName: zip, dtype: int64"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "df['zip'].value_counts().head()"
    ]
   },
   {
@@ -283,6 +372,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "LOWER MERION    8443\nABINGTON        5977\nNORRISTOWN      5890\nUPPER MERION    5227\nCHELTENHAM      4575\nName: twp, dtype: int64"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "df['twp'].value_counts().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 135,
    "metadata": {
     "collapsed": false
@@ -311,6 +418,24 @@
    "metadata": {},
    "source": [
     "** Take a look at the 'title' column, how many unique title codes are there? **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "110"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "df['title'].nunique()"
    ]
   },
   {
@@ -1463,7 +1588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
